--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -19,6 +19,7 @@
 \fi
 
 \usepackage[unicode=true]{hyperref}
+% tlmgr install csquotes
 \usepackage[babel=true]{csquotes}
 \hypersetup{breaklinks=true, pdfborder={0 0 0}}
 \setlength{\parindent}{0pt}
