--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -41,7 +41,13 @@
 % defs
 % ----
 \def\twt{Twitter}
+\def\fb{Facebook}
+\def\ldin{LinkedIn}
+\def\tb{Teebr}
 \def\api{\I {\sc api}}
+
+\def\tweet{\I{Tweet}}
+\def\tweets{\I{Tweets}}
 
 \input{titre.tex}
 
