--- a/translations/fr/LC_MESSAGES/messages.po
+++ b/translations/fr/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# English translations for PROJECT.
+# French translations for PROJECT.
 # Copyright (C) 2015 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2015-03-11 21:59+0100\n"
-"PO-Revision-Date: 2015-01-22 23:45+0100\n"
+"PO-Revision-Date: 2015-03-11 21:45+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: en <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language-Team: fr <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,23 +19,23 @@ msgstr ""
 
 #: templates/home.html:6
 msgid "@{}’s Teebr"
-msgstr ""
+msgstr "Teebr de @{}"
 
 #: templates/home.html:19
 msgid "Yep"
-msgstr ""
+msgstr "Oui"
 
 #: templates/home.html:22
 msgid "Nope"
-msgstr ""
+msgstr "Non"
 
 #: templates/home.html:25
 msgid "Skip"
-msgstr ""
+msgstr "Passer"
 
 #: templates/home.html:26
 msgid "Report as Spam"
-msgstr ""
+msgstr "Signaler comme spam"
 
 #: templates/main.html:4
 msgid "Teebr"
@@ -43,12 +43,9 @@ msgstr ""
 
 #: templates/main.html:5
 msgid "Find interesting accounts on Twitter."
-msgstr ""
+msgstr "Trouver des comptes intéressants sur Twitter."
 
 #: templates/main.html:10
 msgid "Sign in with Twitter"
-msgstr ""
-
-#~ msgid ""
-#~ msgstr ""
+msgstr "Se connecter avec Twitter"
 
