--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -30,6 +30,9 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 
+\usepackage{fancyvrb}
+\VerbatimFootnotes
+
 % http://tex.stackexchange.com/a/144928/14718
 \usepackage[round]{natbib}
 \bibliographystyle{plainnatfr}
@@ -46,8 +49,9 @@
 \def\tb{Teebr}
 \def\api{\I {\sc api}}
 
-\def\tweet{\I{Tweet}}
-\def\tweets{\I{Tweets}}
+\def\tweet{Tweet}
+\def\tweets{Tweets}
+\def\rts{Retweets}
 
 \input{titre.tex}
 
