report: accounts added

--- a/report/methodo.tex
+++ b/report/methodo.tex
@@ -47,8 +47,12 @@ intéressant. On se connecte à l’\api{} en envoyant une liste de mots-clefs
 tweets qui mentionnent ceux-ci en temps réel. La liste de mots-clefs compte
 environ 170 termes renseignés à la main pour couvrir le thème des nouvelles
 technologies. Elle comprend notamment la liste des langages de programmation
-les plus utilisés sur GitHub\footnote{http://githut.info/} ainsi qu’une liste
-d’entreprises comme Google, Amazon et Apple.
+les plus utilisés sur GitHub\footnote{\url{http://githut.info/}} ainsi qu’une
+liste d’entreprises comme Google, Amazon et Apple. Afin de ne pas rater de
+\tweets{} avec une liste fermée comme celle-ci, on ajoute une liste d’environ
+140 comptes à suivre, compilée depuis
+  \href{http://uk.businessinsider.com/100-best-tech-people-on-twitter-2014-2014-11?op=1?r=US}{un
+    article de Business Insider}.
 
 Chaque \tweet{} passe ensuite une série de filtres\footnote{Voir
 \verb|teebr.features.filter_status|} pour éliminer les tweets en langue autre
