--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -18,7 +18,7 @@
   \fi
 \fi
 
-\usepackage[unicode=true]{hyperref}
+\usepackage[unicode=true,colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
 % tlmgr install csquotes
 \usepackage[babel=true]{csquotes}
 \hypersetup{breaklinks=true, pdfborder={0 0 0}}
