--- a/translations/fr/LC_MESSAGES/messages.po
+++ b/translations/fr/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2015-03-11 21:59+0100\n"
+"POT-Creation-Date: 2015-03-14 12:33+0100\n"
 "PO-Revision-Date: 2015-03-11 21:45+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: fr <LL@li.org>\n"
@@ -17,29 +17,37 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-#: templates/home.html:6
-msgid "@{}’s Teebr"
-msgstr "Teebr de @{}"
+#: app.py:82 templates/main.html:4
+msgid "Teebr"
+msgstr ""
 
-#: templates/home.html:19
+#: app.py:140
+msgid "@{}’s Home"
+msgstr "Accueil de @{}"
+
+#: app.py:152
+msgid "@{}’s Settings"
+msgstr "Réglages de @{}"
+
+#: teebr/web/oauth.py:36
+msgid "You denied the request to sign in."
+msgstr "Vous avez refusé la requête de connexion."
+
+#: templates/home.html:18
 msgid "Yep"
 msgstr "Oui"
 
-#: templates/home.html:22
+#: templates/home.html:21
 msgid "Nope"
 msgstr "Non"
 
-#: templates/home.html:25
+#: templates/home.html:24
 msgid "Skip"
 msgstr "Passer"
 
-#: templates/home.html:26
+#: templates/home.html:25
 msgid "Report as Spam"
 msgstr "Signaler comme spam"
-
-#: templates/main.html:4
-msgid "Teebr"
-msgstr ""
 
 #: templates/main.html:5
 msgid "Find interesting accounts on Twitter."
@@ -48,4 +56,52 @@ msgstr "Trouver des comptes intéressants sur Twitter."
 #: templates/main.html:10
 msgid "Sign in with Twitter"
 msgstr "Se connecter avec Twitter"
+
+#: templates/settings.html:13
+msgid "Language:"
+msgstr "Langue :"
+
+#: templates/settings.html:25
+msgid "Stats"
+msgstr ""
+
+#: templates/settings.html:27
+msgid "You rated <b>{} Tweets</b> so far."
+msgstr "Vous avez noté <b>{} Tweets</b>."
+
+#: templates/settings.html:28
+msgid "Go on!"
+msgstr "Continuez comme ça !"
+
+#: templates/settings.html:31
+msgid "Danger Zone"
+msgstr "Zone dangereuse"
+
+#: templates/settings.html:34
+msgid "Resetting your Teebr account won’t harm your Twitter one."
+msgstr ""
+"Réinitialiser votre compte Teebr ne fera pas de mal à votre compte "
+"Twitter."
+
+#: templates/settings.html:35
+msgid ""
+"It’ll delete all your ratings and restore your account to an\n"
+"                 empty state."
+msgstr ""
+"Cela va supprimer toutes vos notes et restaurer votre compte à son état "
+"initial."
+
+#: templates/settings.html:37
+msgid "You can’t undo this."
+msgstr "Vous ne pouvez pas annuler cette action."
+
+#: templates/settings.html:42
+msgid "Reset my account"
+msgstr "Réinitialiser mon compte"
+
+#~ msgid "@{}’s"
+#~ msgstr ""
+
+#~ msgid "You denied the request to sign in."
+#~ msgstr ""
 
