--- a/report/intro.tex
+++ b/report/intro.tex
@@ -9,7 +9,9 @@ réseaux sociaux (par exemple ami(e)s ou collègues) se basent principalement su
 le graph social et la place de chaque utilisateur dans celui-ci.
 
 On s’intéresse ici au réseau social \twt{}, où chaque utilisateur peut produire
-du contenu sous forme de cours messages (\tweets), lisibles par tous sur son
+du contenu sous forme de courts messages (\tweets\footnote{On utilise ici les
+  recommandations en matière de traduction de \twt{}, qui veut, entre autres,
+  que l’on capitalise le mot \tweet{}.}), lisibles par tous sur son
 profil. Un utilisateur peut \I{s’abonner} à d’autres utilisateurs, ce qui lui
 permet de recevoir le flux continu de tous les messages de ces abonnements sans
 avoir à consulter chaque profil individuellement. Cette notion d’abonnement est
@@ -33,3 +35,41 @@ Le projet \tb{} a pour but de faire de la recommandation d’utilisateurs sur
 habituellement, mais en fonction du contenu qu’ils produisent. On utilisera
 pour cela un système de notation de \tweets{} pour construire le profil d’un
 utilisateur.
+
+\section{Définitions}
+
+Nous définissons ici un certain nombre de termes utilisés dans la suite de ce
+rapport.
+
+\subsection{Twitter}
+
+\twt{} est un réseau social fondé il y a bientôt dix ans (2006) qui possède son
+propre vocabulaire. Les \I{\tweets{}} sont les courts messages postés par les
+utilisateurs. Un \I{\rt{}} est la retransmission d’un \tweet{} d’un utilisateur
+par un autre. \I{Retweeter} un message permet à un utilisateur de le partager
+avec l’ensemble de ses abonnés. Une \I{réponse} est un message posté pour
+\I{répondre} à un autre. Les utilisateurs de \twt{} peuvent ainsi s’engager
+dans des conversations en \I{répondant} aux \tweets{} d’autres utilisateurs.
+
+\subsection{Producteurs et consommateurs}
+
+\tb{} est conçu pour fonctionner avec plusieurs utilisateurs. Ceux-ci sont
+appelés \I{Consommateurs} car ils \I{consomment} du contenu en le lisant. Ils
+sont l’opposé des \I{Producteurs}, qui sont les comptes \twt{} dont on récupère
+le contenu (les \tweets{}). Leur rôle est inversé entre \twt{} et la plateforme
+\tb{} : sur le premier, les producteurs sont actifs tandis que les
+consommateurs sont passifs. Sur \tb{}, les consommateurs sont actifs (ils
+notent du contenu) tandis que les producteurs sont passifs. On désigne ici par
+« contenu » les \I{\tweets{}} produits par un utilisateur (un producteur,
+donc).
+
+\subsection{Signatures}
+
+Chaque consommateur, producteur et \tweet{} possède une \I{Signature}. Celle-ci
+est un vecteur d’entiers, chaque entier correspondant à une \I{Caractéristique}
+(\I{feature}). Ces caractéristiques sont les mêmes pour les trois entités. La
+signature d’un \tweet{} est fonction de ses caractéristiques propres (langue,
+source, présence ou non de lien, sujet, etc). La signature d’un producteur est
+un produit de l’ensemble des signatures des \tweets{} qu’il a écrit. La
+signature d’un consommateur est un produit de l’ensemble des signatures des
+\tweets{} qu’il a noté.
