--- a/report/intro.tex
+++ b/report/intro.tex
@@ -9,9 +9,7 @@ réseaux sociaux (par exemple ami(e)s ou collègues) se basent principalement su
 le graph social et la place de chaque utilisateur dans celui-ci.
 
 On s’intéresse ici au réseau social \twt{}, où chaque utilisateur peut produire
-du contenu sous forme de courts messages (\tweets\footnote{On utilise ici les
-  recommandations en matière de traduction de \twt{}, qui veut, entre autres,
-  que l’on capitalise le mot \tweet{}.}), lisibles par tous sur son
+du contenu sous forme de courts messages (\tweets{}), lisibles par tous sur son
 profil. Un utilisateur peut \I{s’abonner} à d’autres utilisateurs, ce qui lui
 permet de recevoir le flux continu de tous les messages de ces abonnements sans
 avoir à consulter chaque profil individuellement. Cette notion d’abonnement est
