--- a/report/rapport.bib
+++ b/report/rapport.bib
@@ -1,6 +1,32 @@
 @phdthesis{Rigouste06,
-  author = {Lo\:is Rigouste},
-  title = {M\'ethodes probabilistes pour l'analyse exploratoire de donn\'es
+  title = {{M}\'ethodes probabilistes pour l'analyse exploratoire de donn\'ees
     textuelles},
+  author = {Rigouste, Lo\"is},
   year = {2006}
+}
+
+@article{Pennacchiotti11,
+  title={{A} {M}achine {L}earning {A}pproach to {T}witter {U}ser {C}lassification},
+  author={Pennacchiotti, Marco and Popescu, Ana-Maria},
+  journal={ICWSM},
+  volume={11},
+  pages={281--288},
+  year={2011}
+}
+
+@article{Ramage2010,
+  title={{C}haracterizing {M}icroblogs with {T}opic {M}odels},
+  author={Ramage, Daniel and Dumais, Susan T and Liebling, Daniel J},
+  journal={ICWSM},
+  volume={5},
+  number={4},
+  pages={130--137},
+  year={2010}
+}
+
+@inproceedings{OConnor2010,
+  title={{T}weet{M}otif: {E}xploratory {S}earch and {T}opic {S}ummarization for {T}witter},
+  author={O'Connor, Brendan and Krieger, Michel and Ahn, David},
+  booktitle={ICWSM},
+  year={2010}
 }
