--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -18,7 +18,7 @@
   \fi
 \fi
 
-\usepackage[unicode=true,colorlinks=true,linkcolor=blue,urlcolor=blue]{hyperref}
+\usepackage[unicode=true,colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=black]{hyperref}
 % tlmgr install csquotes
 \usepackage[babel=true]{csquotes}
 \hypersetup{breaklinks=true, pdfborder={0 0 0}}
@@ -39,7 +39,6 @@
 
 \newcommand{\I}{\textit}
 \newcommand{\q}{\enquote}
-\newcommand{\hash}{\texttt}
 
 % defs
 % ----
@@ -49,10 +48,10 @@
 \def\tb{Teebr}
 \def\api{\I {\sc api}}
 
-\def\tweet{Tweet}
-\def\tweets{Tweets}
-\def\rt{Retweet}
-\def\rts{Retweets}
+\def\tweet{tweet}
+\def\tweets{tweets}
+\def\rt{retweet}
+\def\rts{retweets}
 
 \input{titre.tex}
 
