--- a/report/intro.tex
+++ b/report/intro.tex
@@ -51,7 +51,7 @@ dans des conversations en \I{répondant} aux \tweets{} d’autres utilisateurs.
 
 \subsection{Producteurs et consommateurs}
 
-\tb{} est conçu pour fonctionner avec plusieurs utilisateurs. Ceux-ci sont
+\tb{} est conçu pour fonctionner avec plusieurs utilisateurs. Ceux-ci sont ici
 appelés \I{Consommateurs} car ils \I{consomment} du contenu en le lisant. Ils
 sont l’opposé des \I{Producteurs}, qui sont les comptes \twt{} dont on récupère
 le contenu (les \tweets{}). Leur rôle est inversé entre \twt{} et la plateforme
