--- a/report/methodo.tex
+++ b/report/methodo.tex
@@ -25,10 +25,10 @@ des recherches beaucoup plus performantes.
 
 Enfin, la troisième est l’interface Web, à l’aide des bibliothèques
 \verb|Flask| et \verb|Gunicorn| pour la gestion des requêtes et de \verb|Babel|
-pour la localisation. L’interface utilise
-également \verb|LESS| pour pré-processer le CSS, et le framework
-\verb|Bootstrap| pour la mise en forme. Le site Web tourne dans un conteneur
-\I{Docker}, et est déployé avec \verb|dokku|.
+pour la localisation. L’interface utilise également \verb|LESS| pour
+pré-processer le CSS, le framework \verb|Bootstrap| pour une base de mise en
+forme et \verb|AngularJS| pour l’interaction sur les pages. Le site Web tourne
+dans un conteneur \I{Docker}, et est déployé avec \verb|dokku|.
 
 L’ensemble du code, y compris les commentaires, est écrit en anglais, et le
 projet est versionné avec Git.
@@ -75,7 +75,7 @@ récupération\footnote{Pour donner un ordre d’idée, le flux nous permet
 d’importer un peu plus de 1000 comptes par minute dans la base de données}.
 
 Il est donc nécessaire de faire une récupération plus approfondie. On utilise
-ici toujours l’\api{} de \twt{}, mais cette fois-ci on parcourt tous les
+ici toujours l’\api{} de \twt{}, mais on parcourt cette fois-ci tous les
 producteurs enregistrés dans la base grâce à la précédente passe et on récupère
 leurs derniers \tweets{}\footnote{Au maximum 50 par compte actuellement, mais
 ce montant est paramétrable}. Il
@@ -83,15 +83,16 @@ faut un nombre conséquent de \tweets{} pour générer la signature d’un
 producteur et cette passe nous permet de le faire. Elle corrige également les
 défauts de la précédente notamment la sensibilité à l’actualité du moment.
 
-En plus des données fournies par l’\api{}, nous extrayons les noms des
-\tweets{} à l’aide de la bibliothèque \verb|textblob|, basée sur \verb|nltk|,
-avec un pré-nettoyage du texte maison et un post-traitement pour supprimer les
-faux positifs\footnote{Voir dans \verb|teebr.text.utils|}. Ces entitées sont
-stockées dans un champ de chaque \tweet{}. Il y a souvent des faux positifs,
-mais cela réduit déjà les possibilités de représentation du \tweet{} : il est
-plus facile d’agréger les tweets avec une courte liste de mots plutôt qu’avec
-un texte de 140 caractères qui contient des URLs, des smileys, et surtout des
-mots qui n’ajoutent pas d’information concernant le sujet (\I{stopwords}).
+En plus des données fournies par l’\api{}, nous extrayons les entitées nommées
+des \tweets{} à l’aide de la bibliothèque \verb|textblob|, basée sur
+\verb|nltk|, avec un pré-nettoyage du texte maison et un post-traitement pour
+supprimer les faux positifs\footnote{Voir dans \verb|teebr.text.utils|}. Ces
+entitées sont stockées dans un champ de chaque \tweet{}. Il y a souvent des
+faux positifs, mais cela réduit déjà les possibilités de représentation du
+\tweet{} : il est plus facile d’agréger les tweets avec une courte liste de
+mots plutôt qu’avec un texte de 140 caractères qui contient des URLs, des
+smileys, et surtout des mots qui n’ajoutent pas d’information concernant le
+sujet (\I{stopwords}).
 
 \subsubsection{Sélection}
 
@@ -145,11 +146,12 @@ permettant de le comparer à un autre producteur ayant un nombre différent de
 Nous proposons un ensemble aléatoire de \tweets{} aux utilisateurs, qui peuvent
 les noter. Une note positive ajoute la signature du \tweet{} à celle de
 l’utilisateur, de façon identique à ce qu’on fait pour les producteurs. Une
-note négative retire au contraire la signature du \tweet{} de celle de
-l’utilisateur. Ce procédé peut résulter en des caractéristiques négatives pour
-un utilisateur. Il nous fait également perdre de l’information, mais nous
-n’avons pas trouvé d’autre moyen d’exprimer le rejet d’une catégorie de
-\tweets{}.
+note négative n’a pas d’effet sur la signature du consommateur. Au début du
+projet, nous retirions les signatures des \tweets{} rejetés de la signature du
+consommateur mais le faible ratio
+$(\text{\tweets{} acceptés} / \text{\tweets{} refusés})$ donnait des signatures
+négatives tout le temps. Aussi, cela nous faisait perdre trop d’information sur
+les \tweets{} acceptés.
 
 La similarité entre producteurs et consommateurs se fait ensuite à partir de la
 similarité de leurs signatures. On ne conserve que les caractéristiques qui
@@ -157,6 +159,30 @@ sont non-nulles pour chacun d’entre eux, les divisent par le nombre de
 \tweets{} produits pour l’un et noté pour l’autre, et effectuons une somme
 pondérée des différences\footnote{Voir \verb|teebr.recommendation|}. Cette
 somme est ensuite divisée par la somme des pondération des caractéristiques
-utilisées pour obtenir une distance entre $0$ et $1$. Une signature de $0$
-signifie que les deux utilisateurs sont parfaitement proches et une signature
+utilisées pour obtenir une distance entre $0$ et $1$. Une distance de $0$
+signifie que les deux utilisateurs sont parfaitement proches et une distance
 de $1$ signifie qu’elles sont très éloignées.
+
+\begin{equation}
+  \label{eq:sig_proc_cons}
+  \begin{split}
+    producer &= (\,43, 12, 26, 1, \ldots, 16\,)\quad\qquad\text{(43 tweets)} \\
+             &\Rightarrow (\,1, 0.28, 0.6, 0.02, \ldots, 0.37\,) \\
+    \\
+    %                                         poor man's spacing
+    consumer &= (\,17, 25, 3, 0, \ldots, 12\,)\,\,\,\quad\qquad\text{(25 tweets)} \\
+             &\Rightarrow (\,0.68, 1, 0.12, 0, \ldots, 0.48\,)
+  \end{split}
+\end{equation}
+
+Si on prend comme exemple les signatures de la figure \ref{eq:sig_proc_cons},
+avec les pondérations $(3, 2, 1, 1, 2)$, on obtient la valeur de similarité en
+calculant la différence entre chaque signature:
+
+$$
+\frac{|1-0.68|\times 3+|0.28-1|\times 2+|0.6-0.12|+|0.02-0|+|0.37-0.48|\times 2}{3 + 2 + 1 + 1 + 2}=0.35
+$$
+
+Le résultat est un nombre entre 0 et 1. Plus la distance est basse, plus les
+profils sont proches. Dans notre exemple, la similarité est plutôt bonne, sans
+être extraordinaire.
