report: results + conclusion

--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -2,4 +2,22 @@
 
 \section{Conclusion}
 
-TODO
+Ce projet est ambitieux et a rencontré plus de difficultés que
+prévu\footnote{Est-ce vraiment une surprise ? :)}. La taille des documents
+utilisés ainsi le problème de qualité de la source de contenu a compliqué la
+tâche, mais les résultats montrent que la méthodologie utilisée ici n’est pas
+suffisante pour faire de la recommandation pertinente. Ce projet se veut
+expérimental, et son but était de pouvoir répondre à la question suivante :
+est-il possible de faire de la recommandation sur des textes très courts sans
+jamais utiliser le graphe social, ce qui semble pourtant être la solution la
+plus simple ici ? Au vu des résultats du projet, il nous semble que son
+objectif a été atteint, et que la réponse est « non. » Nous aurions pu explorer
+d’autres pistes (\ref{sec:pistes}) qui auraient amélioré les résultats mais le
+ratio résultat/effort semble être plus important en utilisant le graphe social.
+
+\section{Ressources}
+
+\begin{itemize}
+  \item Sources du projet : \url{https://github.com/teebr/Teebr}
+  \item Démo en ligne : \url{http://teebr.co}
+\end{itemize}
