--- a/report/discuss.tex
+++ b/report/discuss.tex
@@ -33,7 +33,7 @@ vocabulaire utilisé limitent très sérieusement les analyses linguistiques. Un
 \tweet{} contient en moyenne 11 mots \citep{OConnor2010}, il n’y a donc pas de
 répétition du sujet dans un message.
 
-\subsection{Pistes non explorées}
+\subsection{Pistes non explorées} \label{sec:pistes}
 
 Ce projet se concentre sur la recommandation basée sur les caractéristiques et
 le contenu des \tweets{} rapportés à leur auteur. Nous aurions aussi pu tenter
