--- a/report/methodo.tex
+++ b/report/methodo.tex
@@ -117,8 +117,8 @@ comptes dont un seul des \tweets{} est détecté comme du spam\footnote{Voir dan
 Une fois qu’un \tweet{} a passé tous les filtres et que nous disposons des noms
 mentionnés dans son texte, il est inséré dans la base de données. La
 catégorisation des \tweets{} étant le second plus gros problème rencontré dans
-ce projet après le spam, nous avons simplifié le principe pour avoir une démo
-fonctionnelle pour la soutenance.
+ce projet après le spam, nous avons simplifié le principe pour avoir une
+démonstration fonctionnelle pour la soutenance.
 
 L’objectif de la classification est de pouvoir définir un ensemble fini de
 catégories pour l’ensemble du corpus, qui lui n’a pas de taille finie. Chaque
