--- a/report/titre.tex
+++ b/report/titre.tex
@@ -2,9 +2,9 @@
 
 \title{Teebr\\
     ~\\
-  \large Recommendation de comptes sur Twitter
+  \large Recommandation de comptes sur Twitter
     ~\\
   \large Projet de Fouille de Données (M2)}
 
 \author{Baptiste Fontaine}
-\date{25 mars 2015}
+\date{15 avril 2015}
