--- a/report/intro.tex
+++ b/report/intro.tex
@@ -6,7 +6,7 @@ Les moteurs de recommandation de contenu cherchent à trouver du contenu
 pertinent en fonction de sa similarité avec du contenu consommé par un
 utilisateur, tandis que les moteurs de recommandation de personnes sur les
 réseaux sociaux (par exemple ami(e)s ou collègues) se basent principalement sur
-le graph social et la place de chaque utilisateur dans celui-ci.
+le graphe social et la place de chaque utilisateur dans celui-ci.
 
 On s’intéresse ici au réseau social \twt{}, où chaque utilisateur peut produire
 du contenu sous forme de courts messages (\tweets{}), lisibles par tous sur son
@@ -29,7 +29,7 @@ auxquelles il est abonné, donc la recommandation de contenu est fortement liée
 à la recommandation d’utilisateurs.
 
 Le projet \tb{} a pour but de faire de la recommandation d’utilisateurs sur
-\twt{} non pas en fonction de leur place dans le graph social comme on le fait
+\twt{} non pas en fonction de leur place dans le graphe social comme on le fait
 habituellement, mais en fonction du contenu qu’ils produisent. On utilisera
 pour cela un système de notation de \tweets{} pour construire le profil d’un
 utilisateur.
