--- a/report/discuss.tex
+++ b/report/discuss.tex
@@ -43,7 +43,7 @@ profils sociaux, pas des catégories de contenu. Nous nous sommes également
 concentrés sur l’extraction de mots individuels sans regarder les
 co-occurrences de mots pour construire nos
 catégories~\citep{Ramage2010,Rigouste06}. Cela aurait permis d’éviter les
-ambiguités sur certains termes comme \I{Python} ou \I{Swift}. Enfin, nous ne
+ambiguïtés sur certains termes comme \I{Python} ou \I{Swift}. Enfin, nous ne
 nous intéressons pas aux URLs contenues dans les \tweets{}, alors qu’il serait
 également possible de les classifier, avec plus de succès ici car il existe de
 nombreux corpus de catégorisation d’URLs, notamment en fonction du domaine du
